--- a/styles/index.css
+++ b/styles/index.css
@@ -7,3 +7,11 @@
     clip-path: inset(0.6px);
   }
 }
+
+@media (max-width: 1024px) {
+  input {
+    /* padding-top: 1.5rem; */
+    padding-bottom: 2rem !important;
+    max-width: 18rem !important;
+  }
+}
