--- a/styles/index.css
+++ b/styles/index.css
@@ -8,10 +8,10 @@
   }
 }
 
+h1{
+  margin-bottom: -7px !important;
+}
+
 @media (max-width: 1024px) {
-  input {
-    /* padding-top: 1.5rem; */
-    padding-bottom: 2rem !important;
-    max-width: 18rem !important;
-  }
+ 
 }
